# PushServer

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in
remotebus/: Makefile.am  Makefile.in  rbus-dbus-object-parser.c  rbus-dbus-object-parser.h  rbus-get-service-names.c  rbus-internal.c  rbus-proxy-call.c
remotebus/include/: rbus-dbus-object-parser.h  rbus-get-service-names.h  rbus-proxy-call.h  remotebus-internal.h  remotebus-type.h  remotebus-type.h.in
tests/: Makefile.am  Makefile.in  rbus-all-method-type-test.c  rbus-call-all-method-type-test.c  rbus-call-name-test.c  rbus-create-method-test.c  rbus-test.c
tools/: Makefile.am  Makefile.in  gtk-dbus-xray.c  rbus-call-name-test.c  rbus-create-method-test.c  rbus-test.c
xml/: Makefile.am  Makefile.in  com.avengergear.PushServer.Proxy.xml
