AC_PREREQ(2.52)

m4_define([rbus_major_version], [0])
m4_define([rbus_minor_version], [0])
m4_define([rbus_micro_version], [1])
m4_define([rbus_version],
          [rbus_major_version.rbus_minor_version.rbus_micro_version])
AC_INIT(rbus, [rbus_version])

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE([1.9 tar-ustar])
AC_CONFIG_HEADERS(config.h)

AM_MAINTAINER_MODE

# libtool versioning - this applies to libdbus
#
# See http://sources.redhat.com/autobook/autobook/autobook_91.html#SEC91 for details
#

## increment if the interface has additions, changes, removals.
LT_CURRENT=0

## increment any time the source changes; set to
##  0 if you increment CURRENT
LT_REVISION=0

## increment if any interfaces have been added; set to 0
## if any interfaces have been changed or removed. removal has
## precedence over adding, so set to 0 if both happened.
LT_AGE=0

AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)


AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

RBUS_MAJOR_VERSION=rbus_major_version
RBUS_MINOR_VERSION=rbus_minor_version
RBUS_MICRO_VERSION=rbus_micro_version
RBUS_VERSION=rbus_major_version.rbus_minor_version.rbus_micro_version

AC_SUBST(RBUS_MAJOR_VERSION)
AC_SUBST(RBUS_MINOR_VERSION)
AC_SUBST(RBUS_MICRO_VERSION)
AC_SUBST(RBUS_VERSION)

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_ISC_POSIX
AC_HEADER_STDC
AC_C_INLINE
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(DBUS, dbus-1, have_dbus=true, have_dbus=false)
if ! $have_dbus ; then
	AC_MSG_ERROR([DBus not found.... please include dbus-1-devel above 1.2.0])
fi
AC_SUBST(DBUS_LIBS)
AC_SUBST(DBUS_CFLAGS)

PKG_CHECK_MODULES(LIBXML, libxml-2.0, have_libXML=true, have_libXML=false)
if ! $have_libXML ; then
	AC_MSG_ERROR([libxml2 not found.... please include libxml-2-devel above 2.0])
fi
AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBXML_CFLAGS)

AC_ARG_ENABLE(verbose-mode, AS_HELP_STRING([--enable-verbose-mode],[Enable verbose mode for debugging]),enable_verbose_mode=$enableval,enable_verbose_mode=$USE_MAINTAINER_MODE)

if test x$enable_verbose_mode = xyes; then
    AC_DEFINE(RBUS_ENABLE_VERBOSE_MODE,1,[Enable verbose mode for debugging])
fi


AC_OUTPUT([
remotebus/include/remotebus-type.h
remotebus/Makefile
xml/Makefile
Makefile
])


# Checking dbus path 
